+ jwt, registration; other updates
