# internal/delivery/http/v1/response.go
@@ -1,19 +1,0 @@
-package v1
-
-import (
-	"github.com/gin-gonic/gin"
-	"github.com/sirupsen/logrus"
-)
-
-type response struct {
-	Message string `json:"message"`
-}
-
-type responseToken struct {
-	Token string `json:"token"`
-}
-
-func newResponse(c *gin.Context, statusCode int, err error) {
-	logrus.Error(err)
-	c.AbortWithStatusJSON(statusCode, response{err.Error()})
-}
