# internal/transport/http/v1/books.go
@@ -24,10 +24,10 @@ func (h *Handler) InitBooksRouter(v1 *gin.RouterGroup) {
 // @Security AuthKey
 // @Tags book
 // @ID create-book
-// @Param input body types.BookCreateInput true "info"
+// @Param input body types.BookCreateInput true " "
 // @Success 201 "OK"
-// @Failure 400 {object} response
-// @Failure 500 {object} response
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
 // @Router /api/v1/books/ [post]
 func (h *Handler) Create(c *gin.Context) {
 	var v types.BookCreateInput
@@ -51,11 +51,11 @@ func (h *Handler) Create(c *gin.Context) {
 // @Tags book
 // @Description get book by id
 // @ID get-book-by-id
-// @Param id path string true "id"
+// @Param id path string true " "
 // @Success 200 {object} types.Book
-// @Failure 400,404 {object} response
-// @Failure 500 {object} response
-// @Failure default {object} response
+// @Failure 400,404 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
+// @Failure default {object} types.ErrorResponse
 // @Router /api/v1/books/{id} [get]
 func (h *Handler) GetByID(c *gin.Context) {
 	v, ok := c.Params.Get("id")
@@ -85,7 +85,7 @@ func (h *Handler) GetByID(c *gin.Context) {
 // @Tags book
 // @ID get-all-books
 // @Success 200 {object} []types.Book
-// @Failure 500 {object} response
+// @Failure 500 {object} types.ErrorResponse
 // @Router /api/v1/books/ [get]
 func (h *Handler) GetAll(c *gin.Context) {
 	books, err := h.services.Books.GetAll(c.Request.Context())
@@ -102,10 +102,10 @@ func (h *Handler) GetAll(c *gin.Context) {
 // @Security AuthKey
 // @Tags book
 // @ID delete-book-by-id
-// @Param id path string true "id"
+// @Param id path string true " "
 // @Success 200 "OK"
-// @Failure 400 {object} response
-// @Failure 500 {object} response
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
 // @Router /api/v1/books/{id} [delete]
 func (h *Handler) DeleteByID(c *gin.Context) {
 	v, ok := c.Params.Get("id")
@@ -133,11 +133,11 @@ func (h *Handler) DeleteByID(c *gin.Context) {
 // @Security AuthKey
 // @Tags book
 // @ID update-book-by-id
-// @Param id path string true "id"
-// @Param input body types.BookUpdateInput true "info"
+// @Param id path string true " "
+// @Param input body types.BookUpdateInput true " "
 // @Success 200 "OK"
-// @Failure 400 {object} response
-// @Failure 500 {object} response
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
 // @Router /api/v1/books/{id} [put]
 func (h *Handler) UpdateByID(c *gin.Context) {
 	v, ok := c.Params.Get("id")
